--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Mockup Resources</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700">
-    <!-- David Mendoza -->
+    <!-- David  Mendoza! -->
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
