--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Mockup Resources</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700">
     <!-- David  Mendoza! -->
+    <!-- david mendoza -->
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
